--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1278,24 +1278,24 @@ select {
   background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
 
-.bg-blue-200 {
+.bg-lightBlue-200 {
   --tw-bg-opacity: 1;
-  background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+  background-color: rgba(186, 230, 253, var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
+.bg-lightBlue-400 {
   --tw-bg-opacity: 1;
-  background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+  background-color: rgba(56, 189, 248, var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
+.bg-lightBlue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  background-color: rgba(14, 165, 233, var(--tw-bg-opacity));
 }
 
-.bg-blue-600 {
+.bg-lightBlue-600 {
   --tw-bg-opacity: 1;
-  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+  background-color: rgba(2, 132, 199, var(--tw-bg-opacity));
 }
 
 .bg-teal-200 {
@@ -1308,39 +1308,39 @@ select {
   background-color: rgba(20, 184, 166, var(--tw-bg-opacity));
 }
 
-.bg-green-200 {
+.bg-emerald-200 {
   --tw-bg-opacity: 1;
-  background-color: rgba(187, 247, 208, var(--tw-bg-opacity));
+  background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
 
-.bg-green-300 {
+.bg-emerald-300 {
   --tw-bg-opacity: 1;
-  background-color: rgba(134, 239, 172, var(--tw-bg-opacity));
+  background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
+.bg-emerald-400 {
   --tw-bg-opacity: 1;
-  background-color: rgba(74, 222, 128, var(--tw-bg-opacity));
+  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
+.bg-emerald-500 {
   --tw-bg-opacity: 1;
-  background-color: rgba(34, 197, 94, var(--tw-bg-opacity));
+  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 
-.bg-green-600 {
+.bg-emerald-600 {
   --tw-bg-opacity: 1;
-  background-color: rgba(22, 163, 74, var(--tw-bg-opacity));
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
 
-.bg-green-800 {
+.bg-emerald-800 {
   --tw-bg-opacity: 1;
-  background-color: rgba(22, 101, 52, var(--tw-bg-opacity));
+  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
 }
 
-.bg-green-900 {
+.bg-emerald-900 {
   --tw-bg-opacity: 1;
-  background-color: rgba(20, 83, 45, var(--tw-bg-opacity));
+  background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
 }
 
 .bg-yellow-500 {
@@ -1438,9 +1438,9 @@ select {
   background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
 
-.active\:bg-green-600:active {
+.active\:bg-emerald-600:active {
   --tw-bg-opacity: 1;
-  background-color: rgba(22, 163, 74, var(--tw-bg-opacity));
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
 
 .active\:bg-coolGray-50:active {
@@ -1501,9 +1501,9 @@ select {
   border-collapse: separate;
 }
 
-.border-green-700 {
+.border-emerald-700 {
   --tw-border-opacity: 1;
-  border-color: rgba(21, 128, 61, var(--tw-border-opacity));
+  border-color: rgba(4, 120, 87, var(--tw-border-opacity));
 }
 
 .border-gray-200 {
@@ -3268,14 +3268,14 @@ select {
   color: rgba(79, 70, 229, var(--tw-text-opacity));
 }
 
-.text-blue-400 {
+.text-lightBlue-400 {
   --tw-text-opacity: 1;
-  color: rgba(96, 165, 250, var(--tw-text-opacity));
+  color: rgba(56, 189, 248, var(--tw-text-opacity));
 }
 
-.text-blue-600 {
+.text-lightBlue-600 {
   --tw-text-opacity: 1;
-  color: rgba(37, 99, 235, var(--tw-text-opacity));
+  color: rgba(2, 132, 199, var(--tw-text-opacity));
 }
 
 .text-teal-500 {
@@ -3283,19 +3283,19 @@ select {
   color: rgba(20, 184, 166, var(--tw-text-opacity));
 }
 
-.text-green-300 {
+.text-emerald-300 {
   --tw-text-opacity: 1;
-  color: rgba(134, 239, 172, var(--tw-text-opacity));
+  color: rgba(110, 231, 183, var(--tw-text-opacity));
 }
 
-.text-green-500 {
+.text-emerald-500 {
   --tw-text-opacity: 1;
-  color: rgba(34, 197, 94, var(--tw-text-opacity));
+  color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
 
-.text-green-600 {
+.text-emerald-600 {
   --tw-text-opacity: 1;
-  color: rgba(22, 163, 74, var(--tw-text-opacity));
+  color: rgba(5, 150, 105, var(--tw-text-opacity));
 }
 
 .text-orange-500 {
@@ -3368,9 +3368,9 @@ select {
   color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
-.hover\:text-green-600:hover {
+.hover\:text-emerald-600:hover {
   --tw-text-opacity: 1;
-  color: rgba(22, 163, 74, var(--tw-text-opacity));
+  color: rgba(5, 150, 105, var(--tw-text-opacity));
 }
 
 .hover\:text-coolGray-300:hover {
