add tripadvisor unicode f262 fa-brands

--- a/src/assets/fontawesome/styles/fontawesome.css
+++ b/src/assets/fontawesome/styles/fontawesome.css
@@ -15729,6 +15729,10 @@
     content: "\f513"
 }
 
+.fa-tripadvisor:before {
+    content: "\f262"
+}
+
 .fa-trello:before {
     content: "\f181"
 }
