--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,10 +1,10 @@
+@import '§/fontawesome/styles/fontawesome.css';
+
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
-
-@import "@/assets/fontawesome/styles/fontawesome.css";
 
 .vue-scroll-up {
   align-items: center;
