use @highcanfly-club/fontawesome

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,4 +1,4 @@
-@import '§/fontawesome/styles/fontawesome.css';
+@import '@highcanfly-club/fontawesome/styles/fontawesome.css';
 
 @tailwind base;
 
